<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:background="@drawable/bg_registro_form">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Information_Card"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:padding="12dp"
            android:text="@string/Buttom" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="387dp"
        android:layout_height="282dp"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Form_name" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="21dp"
            android:inputType="textPersonName" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Form_last_name" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="21dp"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Form_num_card" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="21dp"
            android:inputType="number" />


        <RadioGroup
            android:layout_width="363dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="106dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/Form_month" />

            <TextView
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:text="@string/Form_year" />

            <TextView
                android:layout_width="78dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:text="@string/Form_code" />

        </RadioGroup>

        <RadioGroup
            android:layout_width="363dp"
            android:layout_height="25dp"
            android:orientation="horizontal">

            <EditText
                android:layout_width="104dp"
                android:layout_height="wrap_content"

                android:inputType="number" />

            <EditText
                android:layout_width="104dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:inputType="number" />

            <EditText
                android:layout_width="104dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:inputType="number" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/Form_address"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="387dp"
        android:layout_height="120dp"
        android:orientation="vertical"
        android:paddingLeft="12dp">

        <TextView
            android:layout_width="362dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Form_street" />

        <EditText
            android:layout_width="362dp"
            android:layout_height="25dp"
            android:inputType="textPostalAddress" />

        <TextView
            android:layout_width="363dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Form_city" />

        <EditText
            android:layout_width="363dp"
            android:layout_height="20dp"
            android:inputType="textPostalAddress" />
    </LinearLayout>

    <RadioGroup
        android:layout_width="387dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="12dp">

        <TextView
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:text="@string/Form_state" />

        <TextView
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="103dp"
            android:text="@string/Form_code_post" />

    </RadioGroup>

    <RadioGroup
        android:layout_width="387dp"
        android:layout_height="25dp"
        android:orientation="horizontal"
        android:paddingLeft="12dp">

        <EditText
            android:layout_width="159dp"
            android:layout_height="match_parent"
            android:inputType="number" />

        <EditText
            android:layout_width="153dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:inputType="number" />

    </RadioGroup>



</LinearLayout>