<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DetailActivity"
    android:background="@drawable/bg_registro_form">


        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:padding="12dp"
            android:text="@string/Name_Detail"
            android:textColor="@android:color/white"
            android:textSize="20dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="145dp"
            app:cardBackgroundColor="@color/cardview_shadow_start_color">


                <ImageView

                    android:layout_width="127dp"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/credit_card_512" />

                <TextView
                            android:layout_width="248dp"
                            android:layout_height="34dp"
                            android:layout_marginLeft="130dp"
                            android:layout_marginTop="20dp"
                            android:text="@string/Number_card"
                            android:textSize="20dp"/>

                <TextView
                    android:layout_width="248dp"
                    android:layout_height="34dp"
                    android:layout_marginLeft="130dp"
                    android:layout_marginTop="60dp"
                    android:text="@string/Number_card_inf"
                    android:textSize="10dp" />


        </androidx.cardview.widget.CardView>
</LinearLayout>


